added basic components

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGODB_URI=mongodb://localhost:27017/todo-app
+MONGODB_URI=mongodb+srv://mgt306:7ry9p9AbsFCgipUU@cluster0.bvuix.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
