--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGODB_URI=mongodb+srv://mgt306:7ry9p9AbsFCgipUU@cluster0.bvuix.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGODB_URI=mongodb+srv://mgt306:UIJTdjwAbo6aa02F@cluster0.fvmb6kh.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
